--- a/src/assets/css/base.styl
+++ b/src/assets/css/base.styl
@@ -5,6 +5,13 @@ html, body, *
   font-size 18px
   box-sizing border-box
 
+a
+  color #000
+  text-decoration none
+
+a:hover
+  opacity .7
+
 //项目统一设置
 .pd
   padding 0 165px !important
