--- a/src/assets/css/mixin.styl
+++ b/src/assets/css/mixin.styl
@@ -5,3 +5,20 @@ flex($num)
 wd($width)
   flex $wifth
 
+bg-img($url)
+  background-image url($url)
+  background-position top center
+  background-origin top center
+  background-repeat no-repeat
+  background-size cover
+
+bg-color($color)
+  background-color $color
+
+//变量
+//导航首页
+$navHeight = 50px
+
+$hoverOPA = .7
+
+
