--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -34,6 +34,18 @@
 .fl-5
   flex 5
 
+//字体位置及位置
+.t-c
+  text-align center
+
+.col-c
+  display flex
+  justify-content center
+
+.row-c
+  display flex
+  justify-content center
+
 //定位
 .p-r
   position relative
@@ -46,9 +58,10 @@
 
 //居中
 .t-c
-  text-align cneter
+  text-align center
 
 .center
+  display flex
   justify-content center
   align-items center
 
@@ -57,6 +70,40 @@
   top 50%
   left 50%
   transform translate(-50% -50% 0)
+
+//字号
+.fz-12
+  font-size: 12px
+
+.fz-14
+  font-size: 14px
+
+.fz-16
+  font-size: 16px
+
+.fz-18
+  font-size: 18px
+
+.fz-20
+  font-size: 20px
+
+.fz-22
+  font-size: 22px
+
+.fz-24
+  font-size: 24px
+
+.fz-26
+  font-size: 26px
+
+.fz-28
+  font-size: 28px
+
+.fz-30
+  font-size: 30px
+
+.fz-32
+  font-size: 32px
 
 //长宽
 .w1
@@ -101,11 +148,27 @@
 .h100
   width: 100%
 
-//背景
+//元素
+.block
+  display block
+
+.inline
+  display inline
+
+.in-b
+  display inline-block
+
+//背景、颜色
 .bg-w
   background-color #fff
 
+//手势
+.c-p
+  cursor pointer
 
+.t-hover:hover
+  cursor pointer
+  opacity .7
 
 
 
