up 房产首页导航菜单 房产路由页面

--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -170,9 +170,22 @@
   cursor pointer
   opacity .7
 
+.nav-sub-hover:hover
+  background-color rgba(0, 0, 0, 0.2)
 
+//激活状态
+.active
+  color #4BC28A !important
 
-
+//插件自定义样式
+//导航栏气泡
+.nav-pop
+  transform translateY(-28px)
+  padding 12px 0
+  .sub-item
+    height: 30px
+    line-height: 30px
+    font-size: 14px
 
 
 
