--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -162,9 +162,18 @@
 .bg-w
   background-color #fff
 
+.color-w
+  color white
+
+.color-t
+  color #31C27C
+
 //手势
 .c-p
   cursor pointer
+
+.c-d
+  cursor default
 
 .t-hover:hover
   cursor pointer
@@ -186,6 +195,7 @@
     height: 30px
     line-height: 30px
     font-size: 14px
+
 
 
 
