--- a/src/assets/css/mixin.styl
+++ b/src/assets/css/mixin.styl
@@ -7,6 +7,7 @@ wd($width)
 
 bg-img($url)
   background-image url($url)
+
   background-position top center
   background-origin top center
   background-repeat no-repeat
@@ -20,5 +21,7 @@ bg-color($color)
 $navHeight = 100px
 
 $hoverOPA = .7
+
+$themColor = #31c27c
 
 
