--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -105,7 +105,21 @@
 .fz-32
   font-size: 32px
 
+//字体
+.fw-n
+  font-weight: normal
+
+.fw-b
+  font-weight: bold
+
+.fw-bb
+  font-weight: bolder
+
 //长宽
+.wd
+  width: 1242px
+  margin 0 auto
+
 .w1
   width: 1%
 
@@ -168,6 +182,22 @@
 .color-t
   color #31C27C
 
+//层级
+.z-1000
+  z-index 1000
+
+.z-500
+  z-index 500
+
+.z-300
+  z-index 300
+
+.z-200
+  z-index 200
+
+.z-100
+  z-index 100
+
 //手势
 .c-p
   cursor pointer
@@ -181,6 +211,14 @@
 
 .nav-sub-hover:hover
   background-color rgba(0, 0, 0, 0.2)
+
+//边角
+.bd-6
+  border-radius 6px
+
+//隐藏
+.hd
+  overflow hidden
 
 //激活状态
 .active
