--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -104,7 +104,9 @@
 
 .fz-32
   font-size: 32px
-
+//粗体
+.fw
+   font-weight bold
 //长宽
 .w1
   width: 1%
@@ -147,7 +149,10 @@
 
 .h100
   width: 100%
-
+//左右间距15px
+.mg-15
+  margin-left: 15px
+  margin-right: 15px
 //元素
 .block
   display block
